--- a/index.ipynb
+++ b/index.ipynb
@@ -36,7 +36,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load required libraries\n"
+    "# Load required libraries\n",
+    "\n",
+    "\n"
    ]
   },
   {
