--- a/index.ipynb
+++ b/index.ipynb
@@ -37,7 +37,8 @@
    "outputs": [],
    "source": [
     "# Load required libraries\n",
-    "\n",
+    "import pandas as pd\n",
+    "i\n",
     "\n"
    ]
   },
