Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -38,7 +38,8 @@
    "source": [
     "# Load required libraries\n",
     "import pandas as pd\n",
-    "i\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n"
    ]
   },
