--- a/index.ipynb
+++ b/index.ipynb
@@ -48,7 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the data from min_temp.csv and check the index\n"
+    "# Load the data from min_temp.csv and check the index\n",
+    "pd.read_csv('min_temp.csv')"
    ]
   },
   {
