--- a/index.ipynb
+++ b/index.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "# Load the data from min_temp.csv and check the index\n",
-    "pd.read_csv('min_temp.csv')"
+    "rawpd.read_csv('min_temp.csv')"
    ]
   },
   {
