--- a/index.ipynb
+++ b/index.ipynb
@@ -44,12 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the data from min_temp.csv and check the index\n",
-    "rawpd.read_csv('min_temp.csv')"
+    "raw=pd.read_csv('min_temp.csv')"
    ]
   },
   {
