--- a/index.ipynb
+++ b/index.ipynb
@@ -74,7 +74,7 @@
     }
    ],
    "source": [
-    "pd.to_datetime(raw.Date, format= %m%d%y)"
+    "pd.to_datetime(raw.Date, format=' %m%d%y')"
    ]
   },
   {
