Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,7 @@
     }
    ],
    "source": [
-    "pd.to_datetime(raw.Date, format='%m%d%y')"
+    "pd.to_datetime(raw.Date, format='%d%%y')"
    ]
   },
   {
