--- a/index.ipynb
+++ b/index.ipynb
@@ -61,83 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0      1981-01-01\n",
-       "1      1981-02-01\n",
-       "2      1981-03-01\n",
-       "3      1981-04-01\n",
-       "4      1981-05-01\n",
-       "5      1981-06-01\n",
-       "6      1981-07-01\n",
-       "7      1981-08-01\n",
-       "8      1981-09-01\n",
-       "9      1981-10-01\n",
-       "10     1981-11-01\n",
-       "11     1981-12-01\n",
-       "12     1981-01-13\n",
-       "13     1981-01-14\n",
-       "14     1981-01-15\n",
-       "15     1981-01-16\n",
-       "16     1981-01-17\n",
-       "17     1981-01-18\n",
-       "18     1981-01-19\n",
-       "19     1981-01-20\n",
-       "20     1981-01-21\n",
-       "21     1981-01-22\n",
-       "22     1981-01-23\n",
-       "23     1981-01-24\n",
-       "24     1981-01-25\n",
-       "25     1981-01-26\n",
-       "26     1981-01-27\n",
-       "27     1981-01-28\n",
-       "28     1981-01-29\n",
-       "29     1981-01-30\n",
-       "          ...    \n",
-       "3620   1990-02-12\n",
-       "3621   1990-03-12\n",
-       "3622   1990-04-12\n",
-       "3623   1990-05-12\n",
-       "3624   1990-06-12\n",
-       "3625   1990-07-12\n",
-       "3626   1990-08-12\n",
-       "3627   1990-09-12\n",
-       "3628   1990-10-12\n",
-       "3629   1990-11-12\n",
-       "3630   1990-12-12\n",
-       "3631   1990-12-13\n",
-       "3632   1990-12-14\n",
-       "3633   1990-12-15\n",
-       "3634   1990-12-16\n",
-       "3635   1990-12-17\n",
-       "3636   1990-12-18\n",
-       "3637   1990-12-19\n",
-       "3638   1990-12-20\n",
-       "3639   1990-12-21\n",
-       "3640   1990-12-22\n",
-       "3641   1990-12-23\n",
-       "3642   1990-12-24\n",
-       "3643   1990-12-25\n",
-       "3644   1990-12-26\n",
-       "3645   1990-12-27\n",
-       "3646   1990-12-28\n",
-       "3647   1990-12-29\n",
-       "3648   1990-12-30\n",
-       "3649   1990-12-31\n",
-       "Name: Date, Length: 3650, dtype: datetime64[ns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pd.to_datetime(raw.Date)"
+    "dtimes = pd.to_datetime(raw.Date)"
    ]
   },
   {
