--- a/index.ipynb
+++ b/index.ipynb
@@ -73,7 +73,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tsers = pd.Data"
+   ]
   },
   {
    "cell_type": "code",
