Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsers = pd.DataFrame(index=dtimes,data=)"
+    "tsers = pd.DataFrame(index=dtimes,data=raw[''])"
    ]
   },
   {
