--- a/index.ipynb
+++ b/index.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
    ],
    "source": [
     "raw.info()\n",
-    "temp_data"
+    "temp_data = raw"
    ]
   },
   {
@@ -131,7 +131,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Draw a line plot using temp_data \n"
+    "# Draw a line plot using temp_data \n",
+    "plt.plot()"
    ]
   },
   {
