Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -166,7 +166,7 @@
    "outputs": [],
    "source": [
     "# Use dots instead on a continuous line and redraw the timeseries. \n",
-    "temp_data.plot(figsize = (22,8))\n",
+    "temp_data.plot(figsize = (22,8),)\n",
     "plt.show()"
    ]
   },
