--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use pandas grouper to group values using annual frequency\n"
+    "# Use pandas grouper to group values using annual frequency\n",
+    "Groupe"
    ]
   },
   {
