Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -205,7 +205,7 @@
    "outputs": [],
    "source": [
     "# Use pandas grouper to group values using annual frequency\n",
-    "Groupe"
+    "pd.Grouper(key='freq')"
    ]
   },
   {
