--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,8 @@
    ],
    "source": [
     "# Use pandas grouper to group values using annual frequency\n",
-    "temp_data.groupby(pd.Grouper(freq='A'))"
+    "\n",
+    "grou=temp_data.groupby(pd.Grouper(freq='A'))"
    ]
   },
   {
