--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
    "source": [
     "# Use pandas grouper to group values using annual frequency\n",
     "\n",
-    "grou=temp_data.groupby(pd.Grouper(freq='A'))"
+    "grouped=temp_data.groupby(pd.Grouper(freq='A'))"
    ]
   },
   {
