Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,8 @@
    "source": [
     "#Create a new DataFrame and store yearly values in columns \n",
     "temp_annual = pd.DataFrame()\n",
-    "for each "
+    "for yr,data in grouped:\n",
+    "    temp"
    ]
   },
   {
