--- a/index.ipynb
+++ b/index.ipynb
@@ -211,6 +211,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
    "outputs": [],
@@ -218,7 +227,7 @@
     "#Create a new DataFrame and store yearly values in columns \n",
     "temp_annual = pd.DataFrame()\n",
     "for yr,data in grouped:\n",
-    "    temp"
+    "    temp_annual[a]"
    ]
   },
   {
