Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -211,22 +211,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.groupby.DataFrameGroupBy object at 0x7f2a89db5fd0>"
+       "Date\n",
+       "1981-12-31    365\n",
+       "1982-12-31    365\n",
+       "1983-12-31    365\n",
+       "1984-12-31    365\n",
+       "1985-12-31    365\n",
+       "1986-12-31    365\n",
+       "1987-12-31    365\n",
+       "1988-12-31    365\n",
+       "1989-12-31    365\n",
+       "1990-12-31    365\n",
+       "Freq: A-DEC, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grouped"
+    "grouped.size()"
    ]
   },
   {
